Fix: Improve visibility of contact link on assistant FAQ page

--- a/studyhub/courses/templates/courses/assistant_faq.html
+++ b/studyhub/courses/templates/courses/assistant_faq.html
@@ -68,7 +68,7 @@
 
         <hr class="my-4">
         <div class="alert alert-info">
-            Не нашли ответ на свой вопрос? <a href="{% url 'assistant_contact' %}" class="alert-link">Оставьте свой вопрос и контакт для связи</a>.
+            Не нашли ответ на свой вопрос? <a href="{% url 'assistant_contact' %}" class="alert-link fw-bold" style="color: #0d6efd !important; text-decoration: underline;">Оставьте свой вопрос и контакт для связи</a>.
         </div>
     </div>
 </div>
